force-app/main/default/objects/Stock_Inquiry_Product__c/Stock_Inquiry_Product__c.object-meta.xml
<CustomObject>
    <label>Stock Inquiry Product</label>
    <nameField>
        <displayFormat>SIP-{00000}</displayFormat>
        <label>SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Inquiry Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>