force-app/main/default/objects/Stock_Inquiry_Product__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Stock Inquiry Product</relationshipLabel>
    <relationshipName>Stock_Inquiry_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>