force-app/main/default/objects/Stock_Inquiry_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Inquiry Product</relationshipLabel>
    <relationshipName>Stock_Inquiry_Product</relationshipName>
    <type>Lookup</type>
</CustomField>