force-app/main/default/objects/Stock_Inquiry_Product__c/fields/Product_SKU_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU_Number__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product SKU Number</label>
    <type>Text</type>
</CustomField>